--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,121 @@
-.App {
+* {
+  box-sizing: border-box;
+}
+
+:root {
+  --primary-color: #2fcbff;
+}
+
+body {
+  margin: 0%;
+  padding: 0%;
+}
+
+a {
+  color: #fff;
+}
+
+h1 {
+  color: var(--primary-color);
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #fff;
+  padding: 1rem;
+}
+
+input, select {
+  display: block;
+  width: 250px;
+  height: 35px;
+  background-color: transparent;
+  border: 1px solid #555;
+  text-indent: 1rem;
+  margin: 1rem;
+  transition: all .3s ease-in-out;
+}
+
+input:hover, input:focus, select:focus, select:hover {
+  border: 1px solid var(--primary-color);
+}
+
+.logger-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1rem 0rem;
+}
+
+.logger {
+  display: flex;
+  justify-content: space-between;
+  width: 75%;
+  border: 1px solid #868686;
+  padding: .5rem;
+  margin: 1rem;
+}
+
+
+.logger > div > p:first-child {
+  font-weight: bold;
+  color: var(--primary-color);
+  font-size: 1em;
+  margin: 0rem 0rem .2rem 0rem;
+}
+
+.logger > div > p:last-child {
+  color: #333;
+  font-size: .8em;
+  margin: 0rem;
+}
+
+.form-modal {
+  width: 100vw;
+  height: 100vh;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background-color: #9c9a9ae4;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.show-modal {
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.hide-modal {
+  display: none;
+}
+
+.close-btn {
+  background-color: red;
+  color: #fff;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  border: none;
+  cursor: pointer;
+}
+
+.add-button {
+  background-color: var(--primary-color);
+  color: #fff;
+  font-weight: bold;
+  padding: .7rem 2.5rem;
+  border: none;
+  cursor: pointer;
+}
+
+footer {
+  width: 100vw;
+  background-color: var(--primary-color);
+  color: #fff;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
 }
