--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,11 @@ a {
 }
 
 h1 {
-  color: var(--primary-color);
+  background-color: var(--primary-color);
+  color: #fff;
   text-align: center;
+  padding: 1.5rem;
+  margin: 0%;
 }
 
 form {
@@ -43,11 +46,17 @@ input:hover, input:focus, select:focus, select:hover {
   border: 1px solid var(--primary-color);
 }
 
-.logger-container {
+.main, .logger-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 1rem 0rem;
+}
+
+.logger-container {
+  min-height: calc(100vh - 202px);
+  justify-content: center;
+  
 }
 
 .logger {
@@ -71,6 +80,14 @@ input:hover, input:focus, select:focus, select:hover {
   color: #333;
   font-size: .8em;
   margin: 0rem;
+}
+
+.logs-placeholder {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  color: var(--primary-color);
 }
 
 .form-modal {
@@ -112,10 +129,12 @@ input:hover, input:focus, select:focus, select:hover {
 }
 
 footer {
-  width: 100vw;
   background-color: var(--primary-color);
   color: #fff;
   text-align: center;
-  position: absolute;
-  bottom: 0;
+  padding: .5rem;
+}
+
+footer > h3 {
+  margin: 0%;
 }
